triton_backend_sys/src/bindings.rs

#[doc = " Type for trace timeline activity callback function. This callback function\n is used to report activity occurring for a trace. This function\n does not take ownership of 'trace' and so any information needed\n from that object must be copied before returning. The 'userp' data\n is the same as what is supplied in the call to\n TRITONSERVER_InferenceTraceNew."]
pub type TRITONSERVER_InferenceTraceActivityFn_t = ::std::option::Option<
    unsafe extern "C" fn(
        trace: *mut TRITONSERVER_InferenceTrace,
        activity: TRITONSERVER_InferenceTraceActivity,
        timestamp_ns: u64,
        userp: *mut ::std::os::raw::c_void,
    ),
>;
#[doc = " Type for trace tensor activity callback function. This callback function\n is used to report tensor activity occurring for a trace. This function\n does not take ownership of 'trace' and so any information needed\n from that object must be copied before returning. The 'userp' data\n is the same as what is supplied in the call to\n TRITONSERVER_InferenceTraceTensorNew."]
pub type TRITONSERVER_InferenceTraceTensorActivityFn_t = ::std::option::Option<
    unsafe extern "C" fn(
        trace: *mut TRITONSERVER_InferenceTrace,
        activity: TRITONSERVER_InferenceTraceActivity,
        name: *const ::std::os::raw::c_char,
        datatype: TRITONSERVER_DataType,
        base: *const ::std::os::raw::c_void,
        byte_size: usize,
        shape: *const i64,
        dim_count: u64,
        memory_type: TRITONSERVER_MemoryType,
        memory_type_id: i64,
        userp: *mut ::std::os::raw::c_void,
    ),
>;
#[doc = " Type for trace release callback function. This callback function\n is called when all activity for the trace has completed. The\n callback function takes ownership of the\n TRITONSERVER_InferenceTrace object. The 'userp' data is the same\n as what is supplied in the call to TRITONSERVER_InferenceTraceNew."]
pub type TRITONSERVER_InferenceTraceReleaseFn_t = ::std::option::Option<
    unsafe extern "C" fn(
        trace: *mut TRITONSERVER_InferenceTrace,
        userp: *mut ::std::os::raw::c_void,
    ),
>;
extern "C" {
    #[doc = " Create a new inference trace object. The caller takes ownership of\n the TRITONSERVER_InferenceTrace object and must call\n TRITONSERVER_InferenceTraceDelete to release the object.\n\n The activity callback function will be called to report activity\n for 'trace' as well as for any child traces that are spawned by\n 'trace', and so the activity callback must check the trace object\n to determine specifically what activity is being reported.\n\n The release callback is called for both 'trace' and for any child\n traces spawned by 'trace'.\n\n \\param trace Returns the new inference trace object.\n \\param level The tracing level.\n \\param parent_id The parent trace id for this trace. A value of 0\n indicates that there is not parent trace.\n \\param activity_fn The callback function where activity for the\n trace is reported.\n \\param release_fn The callback function called when all activity\n is complete for the trace.\n \\param trace_userp User-provided pointer that is delivered to\n the activity and release callback functions.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_InferenceTraceNew(
        trace: *mut *mut TRITONSERVER_InferenceTrace,
        level: TRITONSERVER_InferenceTraceLevel,
        parent_id: u64,
        activity_fn: TRITONSERVER_InferenceTraceActivityFn_t,
        release_fn: TRITONSERVER_InferenceTraceReleaseFn_t,
        trace_userp: *mut ::std::os::raw::c_void,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Create a new inference trace object. The caller takes ownership of\n the TRITONSERVER_InferenceTrace object and must call\n TRITONSERVER_InferenceTraceDelete to release the object.\n\n The timeline and tensor activity callback function will be called to report\n activity for 'trace' as well as for any child traces that are spawned by\n 'trace', and so the activity callback must check the trace object\n to determine specifically what activity is being reported.\n\n The release callback is called for both 'trace' and for any child\n traces spawned by 'trace'.\n\n \\param trace Returns the new inference trace object.\n \\param level The tracing level.\n \\param parent_id The parent trace id for this trace. A value of 0\n indicates that there is not parent trace.\n \\param activity_fn The callback function where timeline activity for the\n trace is reported.\n \\param tensor_activity_fn The callback function where tensor activity for\n the trace is reported.\n \\param release_fn The callback function called when all activity\n is complete for the trace.\n \\param trace_userp User-provided pointer that is delivered to\n the activity and release callback functions.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_InferenceTraceTensorNew(
        trace: *mut *mut TRITONSERVER_InferenceTrace,
        level: TRITONSERVER_InferenceTraceLevel,
        parent_id: u64,
        activity_fn: TRITONSERVER_InferenceTraceActivityFn_t,
        tensor_activity_fn: TRITONSERVER_InferenceTraceTensorActivityFn_t,
        release_fn: TRITONSERVER_InferenceTraceReleaseFn_t,
        trace_userp: *mut ::std::os::raw::c_void,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Delete a trace object.\n\n \\param trace The trace object.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_InferenceTraceDelete(
        trace: *mut TRITONSERVER_InferenceTrace,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Get the id associated with a trace. Every trace is assigned an id\n that is unique across all traces created for a Triton server.\n\n \\param trace The trace.\n \\param id Returns the id associated with the trace.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_InferenceTraceId(
        trace: *mut TRITONSERVER_InferenceTrace,
        id: *mut u64,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Get the parent id associated with a trace. The parent id indicates\n a parent-child relationship between two traces. A parent id value\n of 0 indicates that there is no parent trace.\n\n \\param trace The trace.\n \\param id Returns the parent id associated with the trace.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_InferenceTraceParentId(
        trace: *mut TRITONSERVER_InferenceTrace,
        parent_id: *mut u64,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Get the name of the model associated with a trace. The caller does\n not own the returned string and must not modify or delete it. The\n lifetime of the returned string extends only as long as 'trace'.\n\n \\param trace The trace.\n \\param model_name Returns the name of the model associated with\n the trace.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_InferenceTraceModelName(
        trace: *mut TRITONSERVER_InferenceTrace,
        model_name: *mut *const ::std::os::raw::c_char,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Get the version of the model associated with a trace.\n\n \\param trace The trace.\n \\param model_version Returns the version of the model associated\n with the trace.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_InferenceTraceModelVersion(
        trace: *mut TRITONSERVER_InferenceTrace,
        model_version: *mut i64,
    ) -> *mut TRITONSERVER_Error;
}
